API service have added. Need server fix for DB useing.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,5 +10,6 @@ html(ng-app='todoListApp')
     script(src='public/javascripts/app.js')
     script(src='public/javascripts/todo-list/todo-list.module.js')
     script(src='public/javascripts/todo-list/todo-list.component.js')
+    script(src='public/javascripts/todo-list/todo-list.service.js')
   body
     block content
